[gd_scene load_steps=9 format=3 uid="uid://csei5wo5mukis"]

[ext_resource type="StyleBox" uid="uid://cpv4c0djtobb4" path="res://src/ui/themes/item_slot_stylebox_normal.tres" id="1_knfd5"]
[ext_resource type="Script" uid="uid://ccfhx2mtxkqs" path="res://src/gameplay/mechanics/inventory/inventory_slots/inventory_item_slot_ui.gd" id="2_qs42h"]
[ext_resource type="FontFile" uid="uid://cs7pj0a4nowjm" path="res://assets/fonts/alagard.ttf" id="3_qs42h"]
[ext_resource type="Theme" uid="uid://k0ll6m3w6kk3" path="res://src/ui/themes/items_themes/unique_border.tres" id="3_w1xua"]
[ext_resource type="Texture2D" uid="uid://bup16gck8m42v" path="res://assets/ui/buttons.png" id="4_qeglh"]
[ext_resource type="StyleBox" uid="uid://bel6u03loird0" path="res://src/ui/themes/base_inventory_slot.tres" id="5_w7y7x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x5bq1"]
atlas = ExtResource("4_qeglh")
region = Rect2(282, 20, 13, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ne2w"]
atlas = ExtResource("4_qeglh")
region = Rect2(248, 20, 17, 20)

[node name="InventoryItemSlotUI" type="Panel" node_paths=PackedStringArray("rarity_texture", "item_texture", "unique_border", "info", "preview_gems_attached")]
custom_minimum_size = Vector2(96, 96)
anchors_preset = -1
anchor_right = 0.075
anchor_bottom = 0.133333
theme_override_styles/panel = ExtResource("1_knfd5")
script = ExtResource("2_qs42h")
rarity_texture = NodePath("MarginContainer/RarityTexture")
item_texture = NodePath("MarginContainer/ItemTexture")
unique_border = NodePath("UniqueBorder")
info = NodePath("MarginContainer/DetailContainer/Footer/Info")
preview_gems_attached = NodePath("MarginContainer/DetailContainer/PreviewGemsAttatched")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_edit_lock_ = true

[node name="RarityTexture" type="TextureRect" parent="MarginContainer"]
layout_mode = 2

[node name="ItemTexture" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DetailContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="PreviewGemsAttatched" type="VBoxContainer" parent="MarginContainer/DetailContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="Footer" type="HBoxContainer" parent="MarginContainer/DetailContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Info" type="Label" parent="MarginContainer/DetailContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_qs42h")

[node name="UniqueBorder" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(92, 92)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -41.0
offset_right = 41.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_w1xua")
metadata/_edit_lock_ = true

[node name="EquipComparator" type="TextureRect" parent="."]
visible = false
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
offset_left = 72.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 24.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture = SubResource("AtlasTexture_x5bq1")
expand_mode = 2
stretch_mode = 5

[node name="LockedPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_w7y7x")

[node name="LockTexture" type="TextureRect" parent="LockedPanel"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_0ne2w")
expand_mode = 3
stretch_mode = 5
